--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-Package      Version
------------- -------
-click        8.1.3
-Flask        2.2.2
-itsdangerous 2.1.2
-Jinja2       3.1.2
-MarkupSafe   2.1.2
-pip          22.0.2
-setuptools   59.6.0
-Werkzeug     2.2.2
+click==8.1.3
+Flask==2.2.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+Werkzeug==2.2.2
