--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
-bin/
-obj/
 .vscode/
-env/
-venv/
+
 .git/
+
+venv/
+env/
+
+*.pyc
 __pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
